added go db examples

--- a/concepts/golang/go.env
+++ b/concepts/golang/go.env
@@ -9,8 +9,8 @@ This variable specifies the directory where compiled binaries are placed when us
 If GOBIN is not set, binaries are typically placed in the bin directory of your GOPATH.
 
 GOROOT: 
-This variable points to the root directory of the Go installation. It is automatically set during the Go installation process and usually 
-does not need to be modified manually.
+This variable points to the root directory of the Go installation. It is automatically set during the Go installation process 
+and usually does not need to be modified manually.
 
 GOOS and GOARCH: 
 These variables specify the target operating system and architecture, respectively, for which Go code is being compiled. 
@@ -27,5 +27,5 @@ It allows you to customize environment variables for specific projects or setups
 
 CGO_ENABLED: 
 This variable controls whether cgo (the Go tool for calling C code from Go) is enabled. 
-Setting CGO_ENABLED=0 disables cgo, which can be useful for pure-Go programs or cross-compilation to different platforms where C code is 
-not needed.
+Setting CGO_ENABLED=0 disables cgo, which can be useful for pure-Go programs or cross-compilation to different platforms 
+where C code is not needed.
